--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.1.0
   path_provider: ^2.0.14
   file_picker: ^5.2.11
+  record: ^4.4.4
 
 dev_dependencies:
   flutter_test:
