dynamic library works I guess

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.0.14
   file_picker: ^5.2.11
   record: ^4.4.4
+  ffi: ^2.0.1
 
 dev_dependencies:
   flutter_test:
