--- a/mic_lib/Cargo.toml
+++ b/mic_lib/Cargo.toml
@@ -3,7 +3,11 @@ name = "mic_lib"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "mic_lib"
+crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 cpal = "0.15.2"
+serde = "1.0.162"
